<resources>
    <string name="app_name">DesignPatternDemo</string>

    <string name="simple_factory_pattern">简单工厂模式</string>
    <string name="factory_method_pattern">工厂模式</string>
    <string name="abstract_factory_pattern">抽象工厂模式</string>
    <string name="strategy_pattern">策略模式</string>
    <string name="decorator_pattern">装饰者模式</string>
    <string name="static_proxy_pattern">静态代理模式</string>
    <string name="dynamic_proxy_pattern">动态代理模式</string>
    <string name="prototype_pattern">原型模式</string>
    <string name="template_method_pattern">模版方法模式</string>
    <string name="facade_pattern">外观模式</string>
    <string name="builder_pattern">建造者模式</string>

    <!-- 简单工厂 -->
    <string name="operation_add">加法</string>
    <string name="operation_subtract">减法</string>
    <string name="operation_multiply">乘法</string>
    <string name="operation_divide">除法</string>
    <string name="operation_result">运算结果：%s</string>
    <string name="operation_type_error">无该运算类型</string>
    <string name="num_one">第一位数</string>
    <string name="num_two">第二位数</string>

    <!-- 工厂方法 -->
    <string name="audi">奥迪</string>
    <string name="ferrari">法拉利</string>

    <!-- 简单工厂 -->
    <string name="database_access">Access</string>
    <string name="database_sqlserver">Sqlserver</string>
    <string name="insert_user">向用户表插入一条记录</string>
    <string name="query_user">查询用户表记录</string>
    <string name="update_vip">更新VIP录信息</string>
    <string name="delete_vip">删除VIP表信息</string>


    <!-- 策略模式 -->
    <string name="normal_price">正常价格</string>
    <string name="discount_price">打7折</string>
    <string name="return_price">满100反30</string>
    <string name="price_result">原价：%1$s，现价：%2$s</string>

    <!-- 装饰者模式 -->
    <string name="chicken_burger">鸡腿堡</string>
    <string name="chicken_burger_with_lettuce">鸡腿堡 + 生菜</string>
    <string name="chicken_burger_with_chilli">鸡腿堡 + 辣椒</string>
    <string name="chicken_burger_with_egg">鸡腿堡 + 煎蛋</string>
    <string name="chicken_burger_with_lettuce_and_egg">鸡腿堡 + 生菜 + 煎蛋</string>
    <string name="chicken_burger_with_lettuce_and_egg_chilli">鸡腿堡 + 生菜 + 煎蛋 + 辣椒</string>

    <!-- 代理模式 -->
    <string name="dynamic_proxy">动态代理</string>
    <string name="buy_lotto">买彩票</string>
    <string name="proxy_buy_lotto">代理买彩票</string>

    <!-- 原型模式 -->
    <string name="create_resume">生成简历</string>

    <!-- 建造者模式 -->
    <string name="create_product">构造产品</string>



</resources>
